Fixed spacing on twitch.html

--- a/main.css
+++ b/main.css
@@ -548,9 +548,9 @@ footer{
 }
 .twitch-background{
   width: 1340px;
-  height: auto;
+  height: 725px;
   display: table;
-  margin: 30px auto 0px auto; 
+  margin: 60px auto 0px auto; 
   /*box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.36);*/
 }
 .twitch-video-container{
